fix: align navar icon for mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -79,8 +79,8 @@
 
 .navBarPhone a {
   color: #ececec;
-  padding-bottom: 0.5rem;
-  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-top: 0.5rem;
   width: 100%;
   padding-left: 0.5rem;
 }
